--- a/web/angular-wallet/src/app/main/send-burst/send-burst.component.scss
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst.component.scss
@@ -6,3 +6,7 @@ mat-form-field {
 form {
     margin:20px 0;
 }
+
+.content {
+    max-width:600px;
+}
